<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_foto">Photo App</string>
    <string name="title_activity_editar_perfil">Editar Perfil</string>
    <string name="tostada">Cambios realizados</string>
    
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo electronico</string>
    <string name="fotrografo">Fotografo?</string>
    <string name="sexo">Sexo</string>
    <string name="pais">Pais</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>

</resources>
