<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Blanco">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/imagenMax"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/cat"
            android:tint="@color/abc_background_cache_hint_selector_material_dark" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imagenMax"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@+id/imagenMax"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nombreContenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nombre"
            android:layout_below="@+id/nombre"
            android:text="Paul"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/apellidosContenido"
            android:layout_alignLeft="@+id/nombreContenido"
            android:text="@string/apellidos"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/apellidosContenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imagenMax"
            android:layout_alignLeft="@+id/apellidos"
            android:text="Barrios Hergueta"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imagenMax"
            android:layout_below="@+id/imagenMax"
            android:layout_marginTop="14dp"
            android:text="@string/correo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailContenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_below="@+id/email"
            android:text="email.direccion@gmail.com"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fotografoContenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/fotografo"
            android:layout_below="@+id/fotografo"
            android:text="Si"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/fotografo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailContenido"
            android:layout_below="@+id/emailContenido"
            android:layout_marginTop="14dp"
            android:text="@string/fotrografo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/fotografoContenido"
            android:layout_below="@+id/fotografoContenido"
            android:layout_marginTop="14dp"
            android:text="@string/pais"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paisContenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pais"
            android:layout_below="@+id/pais"
            android:text="España"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/paisContenido"
            android:layout_below="@+id/paisContenido"
            android:layout_marginTop="14dp"
            android:text="@string/sexo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sexoContenedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/sexo"
            android:layout_below="@+id/sexo"
            android:text="@string/hombre"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="19dp"
            android:onClick="editar"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/editar" />

    </RelativeLayout>

</LinearLayout>
